@@ -21,22 +21,36 @@
 -Dconsole.encoding=UTF-8
 ```
 
-项目根目录下的 `gradle.properties` 配置：
+KMP 项目 Desktop 使用 `println()` 打印中文乱码， 编辑 `build.gradle.kts:
 
-![](images/ScreenShot_2026-05-11_130136_807.png)
 ```
-org.gradle.jvmargs=-Dfile.encoding=UTF-8
+// 确保 Gradle 任务 fork 的 JVM 使用 UTF-8 编码，解决中文输出乱码问题  
+tasks.withType<JavaExec>().configureEach {  
+    systemProperty("file.encoding", "UTF-8")  
+    systemProperty("stdout.encoding", "UTF-8")  
+    systemProperty("stderr.encoding", "UTF-8")  
+    jvmArgs("-Dfile.encoding=UTF-8")  
+}
+
+
+compose.desktop {  
+    application {  
+        mainClass = "aiassistant.app.MainKt"  
+        jvmArgs += "-Dfile.encoding=UTF-8"  
+        jvmArgs += "-Dstdout.encoding=UTF-8"  
+        jvmArgs += "-Dstderr.encoding=UTF-8"  
+        jvmArgs += "--add-opens=java.desktop/java.awt=ALL-UNNAMED"  
+        jvmArgs += "--add-opens=java.desktop/sun.awt=ALL-UNNAMED"  
+	}
+}
 ```
 
-Windows 11 还需要做如下设置：
-
-![651](images/ScreenShot_2026-05-11_121652_583.png)
-
-但是会出现一些软件中文名称乱码
+另外 [更改 PowerShell 默认编码](https://hefengbao.github.io/hw/devops/env/#%E6%9B%B4%E6%94%B9-powershell-%E9%BB%98%E8%AE%A4%E7%BC%96%E7%A0%81) 为 UTF-8
 
 [关于JDK 21在IDEA控制台中文乱码问题解决_jdk21中文乱码-CSDN博客](https://blog.csdn.net/lifeislikeadream8/article/details/141496725)
 
 ## gradle 下载慢
+
 
 替换使用国内镜像：
 
